Increment version - (hopefully) fix package deps

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodebs",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "Node BootStrap (NoBS)",
   "main": "server.js",
   "repository": {
@@ -18,22 +18,22 @@
     "express": "^4.15.3",
     "require-dir": "^0.3.2",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "chdir-promise": "^0.4.1",
+    "execa": "^0.7.0",
+    "jsonfile": "^3.0.1",
+    "unzip": "^0.1.11",
+    "yarn-api": "^1.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-loader": "^7.1.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chdir-promise": "^0.4.1",
-    "execa": "^0.7.0",
-    "jsonfile": "^3.0.1",
     "nodemon": "^1.11.0",
     "npm-install-global": "^1.0.0",
-    "unzip": "^0.1.11",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
-    "yarn-api": "^1.1.0"
+    "webpack-dev-server": "^2.5.0"
   },
   "bugs": {
     "url": "https://github.com/abraham-serafino/nobs/issues"
