--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nobs",
-  "version": "2.2.0",
+  "name": "node-bootstrap",
+  "version": "0.0.1",
   "description": "Node BootStrap (NoBS) - Isomorphic ESNext builds and package management",
   "main": "server.js",
   "repository": {
